--- a/public/index.html
+++ b/public/index.html
@@ -3,94 +3,94 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <title>Pokedex</title>
   </head>
   <body>
     <div class="topbar" id="topbar">
       <input type="text" name="search" placeholder="Search Pokemon" id="search"/>
-      <button> 
-        <div class="top-icons__slider" id="icon-slider">sliders</div>
-      </button>
+      <div id="sliders">
+        <button class="button__slider" type="button">sliders</button>
+      </div>
     </div>
     <div class="top-title">
       <h1>Pokedex</h1>
     </div>
     <main id="main">
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#001</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+      <div class="pokemain" id="pokemain">
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#002</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#003</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#004</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#005</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#006</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#007</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div class="poke__img" id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
-      </div>
-      <div class="pokebox">
-        <div class="poke__number" id="pokenumber">#008</div>
-        <div class="poke__info">
-          <div class="poke__info-name" id="pokename">Bulbasaur</div>
-          <div class="poke__info-type" id="poketype1">Grass</div>
-          <div class="poke__info-type" id="poketype2">Poison</div>
+        <div class="pokebox">
+          <div class="pokebox__number" id="pokenumber">#001</div>
+          <div class="pokebox__info">
+            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
+            <div class="pokebox__info-type" id="poketype1">Grass</div>
+            <div class="pokebox__info-type" id="poketype2">Poison</div>
+          </div>
+          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
         </div>
-        <div id="pokeimg"><img class="poke__img" src="" alt="pokemon"/></div>
       </div>
     </main>
-    <div id="sliders">
-      <button class="button__slider" type="button"></button>
-    </div>
   </body>
 </html>
