--- a/public/index.html
+++ b/public/index.html
@@ -8,89 +8,13 @@
   </head>
   <body>
     <div class="topbar" id="topbar">
-      <input type="text" name="search" placeholder="Search Pokemon" id="search"/>
-      <div id="sliders">
-        <button class="button__slider" type="button">sliders</button>
-      </div>
+      <input class="topbar__input" type="text" name="search" placeholder="Search Pokemon" id="search"/>
+      <button class="topbar__button" type="button" id="sliders"> </button><img class="topbar__img" src="assets/img/pokeball.png" alt="pokeball"/>
     </div>
-    <div class="top-title">
+    <div class="title">
       <h1>Pokedex</h1>
     </div>
-    <main id="main">
-      <div class="pokemain" id="pokemain">
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-      </div>
-    </main>
+    <main class="main" id="main"></main><a class="gotop" href="#" id="gotop"><img src="assets/icons/arrow.svg"/></a>
+    <script src="js/scripts-min.js"></script>
   </body>
 </html>
