--- a/public/view.html
+++ b/public/view.html
@@ -12,17 +12,7 @@
       <div class="top-icons__heart" id="icon-heart"></div>
     </div>
     <main>
-      <div class="pokeview" id="pokeview">
-        <div class="pokebox">
-          <div class="pokebox__number" id="pokenumber">#001</div>
-          <div class="pokebox__info">
-            <div class="pokebox__info-name" id="pokename">Bulbasaur</div>
-            <div class="pokebox__info-type" id="poketype1">Grass</div>
-            <div class="pokebox__info-type" id="poketype2">Poison</div>
-          </div>
-          <div class="pokebox__img" id="pokeimg"><img class="poke__img-src" src="" alt="pokemon"/></div>
-        </div>
-      </div>
+      <div class="pokeview" id="pokeview"></div>
       <poke__stats id="pokestats">
         <div class="tap-bar" id="tap-bar">
           <ul>
@@ -77,5 +67,6 @@
         </div>
       </poke__stats>
     </main>
+    <script src="js/scripts-min.js"></script>
   </body>
 </html>
