search & lazy-loading

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       <h1>Pokedex</h1>
     </div>
     <main class="main" id="main"></main><a class="gotop" href="#" id="gotop"><img src="assets/icons/arrow.svg"/></a>
+    <div class="modal" id="modal"></div>
     <script src="js/scripts-min.js"></script>
   </body>
 </html>
