Link View & local Storage

--- a/public/view.html
+++ b/public/view.html
@@ -8,65 +8,22 @@
   </head>
   <body>
     <div class="top-icons" id="top-icons">
-      <div class="top-icons__arrow" id="icon-arrow"></div>
-      <div class="top-icons__heart" id="icon-heart"></div>
+      <div class="top-icons__arrow" id="icon-arrow">hello</div>
+      <div class="top-icons__heart" id="icon-heart">there</div>
     </div>
-    <main>
-      <div class="pokeview" id="pokeview"></div>
-      <poke__stats id="pokestats">
-        <div class="tap-bar" id="tap-bar">
-          <ul>
-            <li>About</li>
-            <li>Base Stats</li>
-            <li>Evolution</li>
-            <li>Moves</li>
-          </ul>
-        </div>
-        <div class="stats-box" id="statsbox">
-          <div class="stats-box__about">
-            <ul>
-              <li>Species</li>
-              <li>Height</li>
-              <li>Weight</li>
-              <li>Abilities</li>
-            </ul>
-            <h2>Breeding</h2>
-            <ul>
-              <li>Gender</li>
-              <li>Egg groups</li>
-              <li>Egg Cycle</li>
-            </ul>
-          </div>
-          <div class="stats-box__stats">
-            <ul>
-              <li>HP</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-              <li>Attack</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-              <li>Defense</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-              <li>Sp.Atk</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-              <li>Sp.Defense</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-              <li>Speed</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-              <li>Total</li>
-              <h4>50</h4>
-              <progress value="50" max="100"></progress>
-            </ul>
-            <h2>Type Defenses</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur ullam deserunt facere iure deleniti nemo distinctio nobis eveniet laboriosam amet.</p>
-          </div>
-        </div>
-      </poke__stats>
-    </main>
-    <script src="js/scripts-min.js"></script>
+    <div class="pokeview" id="pokeview">
+      <h1 id="pokename"></h1><img src="" alt="Pokemon" id="pokeimg"/>
+    </div>
+    <div class="pokestats" id="pokestats">
+      <div class="tap-bar" id="tap-bar">
+        <ul>
+          <li>About</li>
+          <li>Base Stats</li>
+          <li>Evolution</li>
+          <li>Moves</li>
+        </ul>
+      </div>
+    </div>
+    <script src="js/view.js"></script>
   </body>
 </html>
