--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <input class="topbar__input" type="text" name="search" placeholder="Name/#000" id="search"/>
     </div>
     <div class="slider" id="slider">
-      <button class="slider__button" type="button" tabindex="0" id="slider-button"> </button><img class="slider__img" src="assets/img/pokeball.png" alt="pokeball" id="slider-img"/>
+      <button class="slider__button" type="button" tabindex="0" alt="sliders" id="slider-button"> </button><img class="slider__img" src="assets/img/pokeball.png" alt="pokeball" id="slider-img"/>
     </div>
     <div class="title">
       <h1>Pokedex</h1>
@@ -27,10 +27,9 @@
         <div class="radio__options" id="radio-options">
           <input class="radio__input" type="radio" id="number" name="sort" value="number" tabindex="0" checked="checked"/>
           <input class="radio__input" type="radio" id="name" name="sort" value="name" tabindex="0"/>
-          <input class="radio__input" type="radio" id="favorites" name="sort" value="favorites" tabindex="0"/>
           <label class="radio__label" for="number">number</label>
           <label class="radio__label" for="name">name</label>
-          <label class="radio__label" for="favorites">favorites</label>
+          <button class="modal__button" type="button" id="favorites">Favorites</button>
         </div>
       </form>
     </div>
