--- a/public/view.html
+++ b/public/view.html
@@ -25,24 +25,73 @@
         <input class="tap-bar__input" type="radio" name="item" checked="checked" id="section1"/>
         <input class="tap-bar__input" type="radio" name="item" id="section2"/>
         <input class="tap-bar__input" type="radio" name="item" id="section3"/>
-        <input class="tap-bar__input" type="radio" name="item" id="section4"/>
         <div class="tap-bar__labels">
           <label class="tap-bar__label" for="section1" tabindex="0">About</label>
           <label class="tap-bar__label" for="section2" tabindex="0">Base Stats</label>
-          <label class="tap-bar__label" for="section3" tabindex="0">Evolution</label>
-          <label class="tap-bar__label" for="section4" tabindex="0">Moves</label>
+          <label class="tap-bar__label" for="section3" tabindex="0">Moves</label>
         </div>
-        <section class="tap-bar__section">
-          <h1>About</h1>
+        <section class="section">
+          <ul class="section__ul">
+            <li class="section__li">
+              <label class="section__label" for="species">species</label>
+              <div class="section__text" id="species"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="height">height</label>
+              <div class="section__text" id="height"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="weight">weight</label>
+              <div class="section__text" id="weight"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="color">color</label>
+              <div class="section__text" id="color"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="abilities">abilities</label>
+              <div class="section__text" id="abilities"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="flavor text">flavor text</label>
+              <div class="section__text" id="flavor text"> </div>
+            </li>
+          </ul>
         </section>
-        <section class="tap-bar__section">
-          <h1>Base Stats</h1>
+        <section class="section">
+          <ul class="section__ul">
+            <li class="section__li">
+              <label class="section__label" for="HP">HP</label>
+              <div class="section__text" id="HP"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="Attack">Attack</label>
+              <div class="section__text" id="Attack"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="Defense">Defense</label>
+              <div class="section__text" id="Defense"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="Sp.Atk">Sp.Atk</label>
+              <div class="section__text" id="Sp.Atk"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="Sp.Defense">Sp.Defense</label>
+              <div class="section__text" id="Sp.Defense"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="Speed">Speed</label>
+              <div class="section__text" id="Speed"> </div>
+            </li>
+            <li class="section__li">
+              <label class="section__label" for="Total">Total</label>
+              <div class="section__text" id="Total"> </div>
+            </li>
+          </ul>
         </section>
-        <section class="tap-bar__section">
-          <h1>Evolution</h1>
-        </section>
-        <section class="tap-bar__section">
-          <h1>Moves</h1>
+        <section class="section">
+          <ul class="moves-list" id="moves-list"></ul>
         </section>
       </div>
     </div>
