--- a/public/view.html
+++ b/public/view.html
@@ -32,27 +32,23 @@
         </div>
         <section class="section">
           <ul class="section__ul">
-            <li class="section__li">
-              <label class="section__label" for="species">species</label>
-              <div class="section__text" id="species"> </div>
-            </li>
-            <li class="section__li">
+            <li class="section__li--height">
               <label class="section__label" for="height">height</label>
               <div class="section__text" id="height"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--weight">
               <label class="section__label" for="weight">weight</label>
               <div class="section__text" id="weight"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--color">
               <label class="section__label" for="color">color</label>
               <div class="section__text" id="color"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--abilities">
               <label class="section__label" for="abilities">abilities</label>
               <div class="section__text" id="abilities"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--flavor text">
               <label class="section__label" for="flavor text">flavor text</label>
               <div class="section__text" id="flavor text"> </div>
             </li>
@@ -60,31 +56,31 @@
         </section>
         <section class="section">
           <ul class="section__ul">
-            <li class="section__li">
+            <li class="section__li--HP">
               <label class="section__label" for="HP">HP</label>
               <div class="section__text" id="HP"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--Attack">
               <label class="section__label" for="Attack">Attack</label>
               <div class="section__text" id="Attack"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--Defense">
               <label class="section__label" for="Defense">Defense</label>
               <div class="section__text" id="Defense"> </div>
             </li>
-            <li class="section__li">
-              <label class="section__label" for="Sp.Atk">Sp.Atk</label>
-              <div class="section__text" id="Sp.Atk"> </div>
+            <li class="section__li--Sp-Atk">
+              <label class="section__label" for="Sp-Atk">Sp-Atk</label>
+              <div class="section__text" id="Sp-Atk"> </div>
             </li>
-            <li class="section__li">
-              <label class="section__label" for="Sp.Defense">Sp.Defense</label>
-              <div class="section__text" id="Sp.Defense"> </div>
+            <li class="section__li--Sp-Def">
+              <label class="section__label" for="Sp-Def">Sp-Def</label>
+              <div class="section__text" id="Sp-Def"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--Speed">
               <label class="section__label" for="Speed">Speed</label>
               <div class="section__text" id="Speed"> </div>
             </li>
-            <li class="section__li">
+            <li class="section__li--Total">
               <label class="section__label" for="Total">Total</label>
               <div class="section__text" id="Total"> </div>
             </li>
