--- a/public/index.html
+++ b/public/index.html
@@ -3,41 +3,58 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <meta name="description" content="List of pokemon with search filters and detailed data from pokeapi.co"/>
+    <meta name="author" content="0biguan"/>
+    <link rel="stylesheet" href="css/styles.css"/><link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+<link rel="manifest" href="favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
     <title>Pokedex</title>
   </head>
-  <body>
-    <header class="header">
-      <div class="topbar" id="topbar">
-        <input class="topbar__input" type="text" name="search" placeholder="Name/#000" id="search"/>
-      </div>
-      <div class="slider" id="slider">
-        <button class="slider__button" type="button" tabindex="0" alt="sliders" id="slider-button"> </button><img class="slider__img" src="assets/img/pokeball.png" alt="pokeball" id="slider-img"/>
-      </div>
-      <div class="modal" id="modal">
-        <form class="radio" id="radio-group">
-          <p class="radio__title">Sort By:
-            <div class="radio__grid">
-              <div class="radio__options" id="radio-options">
-                <input class="radio__input" type="radio" id="number" name="sort" value="number" checked="checked"/>
-                <input class="radio__input" type="radio" id="name" name="sort" value="name"/>
-                <label class="radio__label" for="number" tabIndex="0">number</label>
-                <label class="radio__label" for="name" tabIndex="0">name</label>
-              </div>
-              <button class="modal__button" type="button" id="favorites">favorites</button>
+  <body></body>
+  <header class="header">
+    <div class="topbar" id="topbar">
+      <input class="topbar__input" type="text" name="search" placeholder="Name/#000" id="search"/>
+    </div>
+    <div class="slider" id="slider">
+      <button class="slider__button" type="button" tabindex="0" alt="sliders" id="slider-button"> </button><img class="slider__img" src="assets/img/pokeball.png" alt="pokeball" id="slider-img"/>
+    </div>
+    <div class="modal" id="modal">
+      <form class="radio" id="radio-group">
+        <p class="radio__title">Sort By:
+          <div class="radio__grid">
+            <div class="radio__options" id="radio-options">
+              <input class="radio__input" type="radio" id="number" name="sort" value="number" checked="checked"/>
+              <input class="radio__input" type="radio" id="name" name="sort" value="name"/>
+              <label class="radio__label" for="number" tabIndex="0">number</label>
+              <label class="radio__label" for="name" tabIndex="0">name</label>
             </div>
-          </p>
-        </form>
-      </div>
-      <div class="title">
-        <h1>Pokedex</h1>
-      </div>
-    </header>
-    <main class="main" id="main">
-      <div class="main__content" id="main-content"> 
-        <p>No Matches</p>
-      </div>
-    </main><a class="gotop" href="#" id="gotop"><img src="assets/icons/arrow.svg"/></a>
-    <script src="js/scripts-min.js"></script>
-  </body>
+            <button class="modal__button" type="button" id="favorites">favorites</button>
+          </div>
+        </p>
+      </form>
+    </div>
+    <div class="title">
+      <h1>Pokédex</h1>
+    </div>
+  </header>
+  <main class="main" id="main">
+    <div class="main__content" id="main-content"> 
+      <p>No Matches</p>
+    </div>
+  </main><a class="gotop" href="#" id="gotop"><img src="assets/icons/arrow.svg"/></a>
+  <script src="js/scripts-min.js"></script>
 </html>
