--- a/public/view.html
+++ b/public/view.html
@@ -3,98 +3,115 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <meta name="description" content="List of pokemon with search filters and detailed data from pokeapi.co"/>
+    <meta name="author" content="0biguan"/>
+    <link rel="stylesheet" href="css/styles.css"/><link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+<link rel="manifest" href="favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
     <title>Pokedex</title>
   </head>
-  <body>
-    <div class="grid-content">
-      <div class="top-block" id="top-block">
-        <div class="top-icons" id="top-icons">
-          <button class="top-icons__arrow" alt="arrow" tabindex="0" id="icon-arrow"> </button>
-          <button class="top-icons__heart" alt="heart" tabindex="0" id="icon-heart"></button>
-        </div>
-        <div class="top-view" id="top-view">
-          <div class="pokeinfo" id="pokeinfo">
-            <div class="pokeinfo__type" id="basicinfo">
-              <h1 id="pokename"> </h1>
-            </div>
-            <div class="pokeinfo__number" id="numberinfo">
-              <p id="pokenumber"> </p>
-            </div>
-          </div>
-          <div class="pokeimg" id="pokeimg"><img src="" alt="Pokemon" id="pokedataimg"/></div>
-        </div>
+  <body></body>
+  <div class="grid-content">
+    <div class="top-block" id="top-block">
+      <div class="top-icons" id="top-icons">
+        <button class="top-icons__arrow" alt="arrow" tabindex="0" id="icon-arrow"> </button>
+        <button class="top-icons__heart" alt="heart" tabindex="0" id="icon-heart"></button>
       </div>
-      <div class="tap-bar" id="tap-bar">
-        <input class="tap-bar__input" type="radio" name="item" checked="checked" id="section1"/>
-        <input class="tap-bar__input" type="radio" name="item" id="section2"/>
-        <input class="tap-bar__input" type="radio" name="item" id="section3"/>
-        <div class="tap-bar__labels">
-          <label class="tap-bar__label" for="section1" tabindex="0">About</label>
-          <label class="tap-bar__label" for="section2" tabindex="0">Base Stats</label>
-          <label class="tap-bar__label" for="section3" tabindex="0">Moves</label>
+      <div class="top-view" id="top-view">
+        <div class="pokeinfo" id="pokeinfo">
+          <div class="pokeinfo__type" id="basicinfo">
+            <h1 id="pokename"> </h1>
+          </div>
+          <div class="pokeinfo__number" id="numberinfo">
+            <p id="pokenumber"> </p>
+          </div>
         </div>
-        <section class="section">
-          <ul class="section__ul" tabIndex="0">
-            <li class="section__li section__li--height">
-              <label class="section__label" for="height">height</label>
-              <div class="section__text" id="height"> </div>
-            </li>
-            <li class="section__li section__li--weight">
-              <label class="section__label" for="weight">weight</label>
-              <div class="section__text" id="weight"> </div>
-            </li>
-            <li class="section__li section__li--color">
-              <label class="section__label" for="color">color</label>
-              <div class="section__text" id="color"> </div>
-            </li>
-            <li class="section__li section__li--abilities">
-              <label class="section__label" for="abilities">abilities</label>
-              <div class="section__text" id="abilities"> </div>
-            </li>
-            <li class="section__li section__li--flavor text">
-              <label class="section__label" for="flavor text">flavor text</label>
-              <div class="section__text" id="flavor text"> </div>
-            </li>
-          </ul>
-        </section>
-        <section class="section">
-          <ul class="section__ul" tabIndex="0">
-            <li class="section__li section__li--HP">
-              <label class="section__label" for="HP">HP</label>
-              <div class="section__text" id="HP"> </div>
-            </li>
-            <li class="section__li section__li--Attack">
-              <label class="section__label" for="Attack">Attack</label>
-              <div class="section__text" id="Attack"> </div>
-            </li>
-            <li class="section__li section__li--Defense">
-              <label class="section__label" for="Defense">Defense</label>
-              <div class="section__text" id="Defense"> </div>
-            </li>
-            <li class="section__li section__li--Sp-Atk">
-              <label class="section__label" for="Sp-Atk">Sp-Atk</label>
-              <div class="section__text" id="Sp-Atk"> </div>
-            </li>
-            <li class="section__li section__li--Sp-Def">
-              <label class="section__label" for="Sp-Def">Sp-Def</label>
-              <div class="section__text" id="Sp-Def"> </div>
-            </li>
-            <li class="section__li section__li--Speed">
-              <label class="section__label" for="Speed">Speed</label>
-              <div class="section__text" id="Speed"> </div>
-            </li>
-            <li class="section__li section__li--Total">
-              <label class="section__label" for="Total">Total</label>
-              <div class="section__text" id="Total"> </div>
-            </li>
-          </ul>
-        </section>
-        <section class="section">
-          <ul class="moves-list" id="moves-list"></ul>
-        </section>
+        <div class="pokeimg" id="pokeimg"><img src="" alt="Pokemon" id="pokedataimg"/></div>
       </div>
     </div>
-    <script src="js/view.js"></script>
-  </body>
+    <div class="tap-bar" id="tap-bar">
+      <input class="tap-bar__input" type="radio" name="item" checked="checked" id="section1"/>
+      <input class="tap-bar__input" type="radio" name="item" id="section2"/>
+      <input class="tap-bar__input" type="radio" name="item" id="section3"/>
+      <div class="tap-bar__labels">
+        <label class="tap-bar__label" for="section1" tabindex="0">About</label>
+        <label class="tap-bar__label" for="section2" tabindex="0">Base Stats</label>
+        <label class="tap-bar__label" for="section3" tabindex="0">Moves</label>
+      </div>
+      <section class="section">
+        <ul class="section__ul" tabIndex="0">
+          <li class="section__li section__li--height">
+            <label class="section__label" for="height">height</label>
+            <div class="section__text" id="height"> </div>
+          </li>
+          <li class="section__li section__li--weight">
+            <label class="section__label" for="weight">weight</label>
+            <div class="section__text" id="weight"> </div>
+          </li>
+          <li class="section__li section__li--color">
+            <label class="section__label" for="color">color</label>
+            <div class="section__text" id="color"> </div>
+          </li>
+          <li class="section__li section__li--abilities">
+            <label class="section__label" for="abilities">abilities</label>
+            <div class="section__text" id="abilities"> </div>
+          </li>
+          <li class="section__li section__li--flavor text">
+            <label class="section__label" for="flavor text">flavor text</label>
+            <div class="section__text" id="flavor text"> </div>
+          </li>
+        </ul>
+      </section>
+      <section class="section">
+        <ul class="section__ul" tabIndex="0">
+          <li class="section__li section__li--HP">
+            <label class="section__label" for="HP">HP</label>
+            <div class="section__text" id="HP"> </div>
+          </li>
+          <li class="section__li section__li--Attack">
+            <label class="section__label" for="Attack">Attack</label>
+            <div class="section__text" id="Attack"> </div>
+          </li>
+          <li class="section__li section__li--Defense">
+            <label class="section__label" for="Defense">Defense</label>
+            <div class="section__text" id="Defense"> </div>
+          </li>
+          <li class="section__li section__li--Sp-Atk">
+            <label class="section__label" for="Sp-Atk">Sp-Atk</label>
+            <div class="section__text" id="Sp-Atk"> </div>
+          </li>
+          <li class="section__li section__li--Sp-Def">
+            <label class="section__label" for="Sp-Def">Sp-Def</label>
+            <div class="section__text" id="Sp-Def"> </div>
+          </li>
+          <li class="section__li section__li--Speed">
+            <label class="section__label" for="Speed">Speed</label>
+            <div class="section__text" id="Speed"> </div>
+          </li>
+          <li class="section__li section__li--Total">
+            <label class="section__label" for="Total">Total</label>
+            <div class="section__text" id="Total"> </div>
+          </li>
+        </ul>
+      </section>
+      <section class="section">
+        <ul class="moves-list" id="moves-list"></ul>
+      </section>
+    </div>
+  </div>
+  <script src="js/view.js"></script>
 </html>
